csv clubes de uefa hechos

--- a/rag.ipynb
+++ b/rag.ipynb
@@ -23,9 +23,7 @@
     "\n",
     "Nunca se sabe cual es el mejor prompt, hay que ir probando. Intentar no hacer faltas y demás porque a lo mejor la API no lo pilla bien.\n",
     "\n",
-    "El prompt que sea lo más fino posible. El punto de dolor es como conseguir ese JSON final para que este muy bien hecho para que cuando pregunte Jacinto me responda todo bien.\n",
-    "\n",
-    "\n"
+    "El prompt que sea lo más fino posible. El punto de dolor es como conseguir ese JSON final para que este muy bien hecho para que cuando pregunte Jacinto me responda todo bien."
    ]
   },
   {
